2012-11-01  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpsymbol.c: merged from preprocessor branch
  * gpasm/parse.y: re-introduced fix for
    "produce the listing file in case that included file doesn't exist"

2012-10-31  Borut Razem  <borutr@users.sourceforge.net>
  * Merge from preprocessor branch:
    - gpasm/util.c, gpasm/parse.y, gpasm/directive.c, gpasm/gpasm.h.in,
      gpasm/scan.l:
      use IN_MACRO_DEFINITION, IN_MACRO_EXPANSION, IN_WHILE_EXPANSION and
      IN_FILE_EXPANSION defines
    - gpasm/gpasm.c: reinitialize macro symbol table before second pass
    - gpasm/parse.y: corrected identation
    - gpasm/scan.l: evaluate macro parameters as comma delimited literal
      symbols - identifiers
    - gpasm/macro.c: get rid of now unneeded functions node_to_string(),
      cat_symbol() and cat_string()
    - gpasm/preprocess.c, gpasm/preprocess.h, gpasm/scan.l,
      gpasm/ppscan.l, gpasm/ppparse.y: redesigned to handle recursive #v
    - gpasm/macro.c, gpasm/preprocess.c, gpasm/preprocess.h,
      gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/scan.l:
      separate preprocessing step for macro parameters
    - gpasm/ppscan.l: inner #v handling
    - gpasm/parse.y, gpasm/directive.c, gpasm/evaluate.c, gpasm/evaluate.h:
      removed concatenation functionality
    - gpasm/lst.c, gpasm/lst.h, gpasm/gpasm.c: list / sort all symbols,
      defines and macros
    - gpasm/macro.c: removed concatenation functionality
    - gpasm/Makefile.am, gpasm/Makefile.in, ppcan.l, ppparse.y:
      added ppcan.l and ppparse.y to the project: #v evaluation moved to
      the preprocessor
    - evaluate.c: fixed list_length() for cases where tail of the list is
      not a list; removed concatenation functionality, MPASM(X) compatible
      shift operations in mpasm compatibility mode
    - preprocess.c, gpasm/preprocess.h, gpasm/scan.l, gpasm/parse.y:
      #v evaluation moved to the preprocessor